--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     depends_on:
       - php
       - mysql
+      - mongodb
     networks:
       - laravel
 
@@ -32,6 +33,18 @@ services:
       MYSQL_ROOT_PASSWORD: secret
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
+    networks:
+      - laravel
+  
+  mongodb:
+    image: mvertes/alpine-mongo
+    container_name: mongodb
+    restart: unless-stopped
+    tty: true
+    volumes:
+      - ./data/db:/data/db
+    ports:
+      - "27017:27017"
     networks:
       - laravel
 
